--- a/dinogame/index.html
+++ b/dinogame/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Square Jump Game</title>
+    <style>
+        canvas {
+            border: 1px solid black;
+        }
+    </style>
+</head>
+<body>
+    <canvas id="gameCanvas" width="800" height="400"></canvas>
+    <script src="game.js"></script>
+</body>
+</html> 
